--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "aoc"
-version = "0.0.0-2025day1"
+version = "0.0.0-2025day2"
 edition = "2024"
 
 [dependencies]
+divisors = "0.2.1"
 gumdrop = "0.8.1"
+regex = "1.12.2"
